# homunculy

./: .gitignore  Dockerfile  Homunculy.All.sln  Makefile  README.md  chat_fast.py  docker-compose.yml  homunculy.code-workspace  pyproject.toml  quick_ws_test.py  quick_ws_test_long.py  test-agent.ps1  test-langgraph-memory.ps1  test-management-flow.ps1  test_enum.py  ws_client_interactive.py  z
homunculy/: .cspell.jsonc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cov.xml  docker-compose.yml  langgraph.json  pyproject.toml  test-chat-with-audio.sh  test-tts-voice.sh  test-websocket-interrupt.py  test-websocket-streaming.py  test_tts_direct.py
homunculy/.liquibase/: liquibase.ignore
homunculy/config/: channels.json
homunculy/docs/: architecture.md  infrastructure-reorganization.md  memory.md
homunculy/scripts/: livekit_token.py
homunculy/src/: main.py  main_new.py
homunculy/src/agents/: __init__.py  session.py
homunculy/src/agents/companion/: __init__.py  agent.py
homunculy/src/agents/specialists/: __init__.py  sales.py  tech_support.py
homunculy/src/agents/supervisor/: __init__.py  agent.py  router.py
homunculy/src/application/: __init__.py
homunculy/src/application/graphs/: __init__.py  builder.py  state.py  state_test.py  test_state.py
homunculy/src/application/graphs/edges/: __init__.py  routing.py
homunculy/src/application/graphs/nodes/: __init__.py  generate.py  grade.py  retrieve.py  rewrite.py
homunculy/src/application/services/: __init__.py  memory.py  memory_test.py
homunculy/src/application/use_cases/: __init__.py  chat.py  chat_test.py  companion.py  test_chat.py  test_voice.py  voice.py  voice_test.py
homunculy/src/application/use_cases/gateway/: __init__.py  route_inbound.py  route_inbound_test.py
homunculy/src/common/: __init__.py  docstring.py  logger.py  telemetry.py  type.py  utils.py
homunculy/src/domain/: __init__.py
homunculy/src/domain/entities/: __init__.py  agent.py  agent_test.py  channel.py  message.py  session.py  tenant.py  tenant_test.py  test_message.py  test_session.py
homunculy/src/domain/interfaces/: __init__.py  agent.py  companion.py  dual_system.py  gateway.py  llm.py  memory.py  orchestration.py  persona.py  pipeline.py  rag.py  store.py  stt.py  transport.py  tts.py
homunculy/src/infrastructure/: __init__.py  container.py
homunculy/src/infrastructure/adapters/: __init__.py  factory.py
homunculy/src/infrastructure/adapters/channels/: __init__.py  line_client.py
homunculy/src/infrastructure/adapters/dual_system/: __init__.py  cognition.py  emotion.py  orchestrator.py  reflex.py
homunculy/src/infrastructure/adapters/elevenlabs/: __init__.py  adapter.py  helpers.py
homunculy/src/infrastructure/adapters/gateway/: __init__.py  factory.py  orchestrator.py  policy.py  token_provider.py  token_provider_test.py
homunculy/src/infrastructure/adapters/langgraph/: __init__.py  adapter.py  graph_manager.py  helpers.py  pipecat_service.py  state_test.py
homunculy/src/infrastructure/adapters/llm/: __init__.py  adapter.py  graph_manager.py  state.py  state_test.py
homunculy/src/infrastructure/adapters/openai/: __init__.py  stt.py
homunculy/src/infrastructure/adapters/orchestration/: __init__.py  agents.py  graph_builder.py  langgraph_adapter.py  supervisor_adapter.py  swarm_adapter.py
homunculy/src/infrastructure/adapters/pipeline/: __init__.py  openai_adapter.py
homunculy/src/infrastructure/adapters/store/: __init__.py  in_memory.py  (+3 more)
homunculy/src/infrastructure/config/: __init__.py  settings.py
homunculy/src/infrastructure/livekit/: __init__.py  room.py  token.py  worker.py
homunculy/src/infrastructure/persistence/: __init__.py  checkpointer.py  redis_session_store.py  session_store.py  session_store_test.py  test_checkpointer.py
homunculy/src/infrastructure/pipecat/: __init__.py  pipeline.py  transport.py
homunculy/src/infrastructure/transport/: __init__.py  livekit_agent_worker.py  livekit_worker.py  pipecat_pipeline.py  pipecat_transport.py  pipecat_transport_test.py  session_handle.py  session_process.py  session_process_test.py  test_livekit_worker.py  test_token.py  token.py  token_test.py
homunculy/src/internal/domain/: exceptions.py
homunculy/src/internal/infrastructure/: __init__.py  exceptions.py
homunculy/src/internal/usecases/: __init__.py
homunculy/src/presentation/: __init__.py
homunculy/src/presentation/http/: __init__.py  app.py  routes.py
homunculy/src/presentation/webhooks/: __init__.py  session.py  test_session.py
homunculy/src/settings/: __init__.py  app.py  config.py  database.py  gateway.py  line.py  llm.py  logging.py  pydantic.py  security.py  tts.py
homunculy/src/tests/e2e/: api_test.py  dual_system_test.py  line_webhook_test.py  line_wiremock_test.py  livekit_dispatch_chat_test.py
homunculy/src/tests/integration/: api_test.py  conftest.py  dual_system_test.py  line_test.py  memory_e2e_test.py
homunculy/tests/: conftest.py
homunculy/tests/e2e/: test_ai_agent_api.py
homunculy/tests/integration/: test_ai_agent_repository.py  test_websocket_chat.py
homunculy/tests/unit/: test_background_summarizer.py  test_dependency_injection.py  test_document_entity.py  test_http_rag_service.py  test_langgraph_components.py  test_rag_graders.py  test_rag_nodes.py  test_rag_state.py
homunculy/tests/unit/ai_agent/: conftest.py
rag-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json  test_ingest.json  test_query.json
rag-service/src/: main.py
rag-service/src/internal/: __init__.py
rag-service/src/internal/adapters/: __init__.py
rag-service/src/internal/domain/: __init__.py
rag-service/src/internal/infrastructure/: __init__.py  chunking.py  container.py  openai_embeddings.py  pinecone_store.py
rag-service/src/internal/usecases/: __init__.py  ingest.py  retrieve.py
rag-service/src/settings/: __init__.py  config.py  embedding.py  logging.py  pinecone.py  rag.py  telemetry.py
rag-service/tests/: test_api.py
(+688 files in other folders)
