[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py-clean-arch"
version = "3.0.0"
description = ""
authors = ["cdddg2@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-up = ">=0.9.0"

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
fastapi = "<=1.0.0"
dependency-injector = "^4.41.0"
pydantic = ">2.4.0,<3"
pydantic-settings = "^2.0.0"
uvicorn = "^0.23.2"
langgraph = "^1.0.6"
langgraph-swarm = "^0.0.1"
langgraph-supervisor = "^0.0.31"
langchain-openai = "^0.3.0"
langgraph-checkpoint-postgres = "^2.0.0"
psycopg = "^3.2.0"
structlog = "^25.5.0"
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
opentelemetry-exporter-otlp-proto-http = "^1.26.0"
opentelemetry-instrumentation-logging = "^0.47b0"
elevenlabs = "^2.30.0"
httpx = "^0.28.0"
redislite = "^6.2.0"
[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
libcst = "*"
pre-commit = "^3.8.0"
pylint = "^2.17.7"
pylint-quotes = "^0.2.3"
pyright = "^1.1.401"
mypy = "^1.14.1"
remove-print-statements = "^0.5.2"
ruff = "^0.14.13"

[tool.poetry.group.test.dependencies]
httpx = "^0.28.0"
pytest = "^8.3.0"
pytest-cov = "^4.1.0"
pytest-dependency = "^0.5.1"
pytest-env = "^0.8.2"
pytest-asyncio = "^1.1.1"
pytest-xdist = "^3.5.0"
testcontainers = "^4.8.0"

[tool.poetry.group.db.dependencies]
asyncpg = "^0.28.0"



[tool.pylint]
extension-pkg-whitelist = ["pydantic"]
load-plugins = ["pylint_quotes"]
max-line-length = 100
disable = [
  "W0613", # unused-argument
  "C0114", # missing-module-docstring
  "C0115", # missing-class-docstring
  "C0116", # missing-function-docstring
  "C0301", # line-too-long
  "W0511", # fixme
  "E0213", # no-self-argument
  "C0103", # invalid-name
  "W0707", # raise-missing-from
  "C0123", # unidiomatic-typecheck
  "W0613", # unused-argument
  "C0301", # line-too-long
  "R0903", # too-few-public-methods
  "W1203", # logging-fstring-interpolation
]

[tool.pylint.master]
init-hook = 'import sys; sys.path.append("./src")'

[tool.ruff]
line-length = 100

[tool.ruff.format]


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/**/*.py" = ["T201"]

[tool.ruff.lint]
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "W",   # pycodestyle warnings
  "T20", # flake8-print
]
ignore = [
  "E501", # line too long, handled by ruff format
  "D10",  # Missing docstring
  "D202", # No blank lines allowed after function docstring
  "D203", # https://github.com/PyCQA/pydocstyle/issues/141#issuecomment-146903063
  "D417", # Missing argument descriptions in docstrings
  "D212",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = true
reportPrivateUsage = true
reportUnusedCoroutine = true
reportUnusedVariable = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
no_implicit_optional = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "langgraph.*",
  "langchain.*",
  "langchain_core.*",
  "langchain_openai.*",
  "langchain_community.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src"]
minversion = "7.2"
addopts = """
-n auto
--dist loadfile
-sxvv
-p no:logging
--cov-config=pyproject.toml
--cov=src
--cov-report=xml:cov.xml
--cov-report=term-missing
--cov-append
--no-cov-on-fail
--asyncio-mode=auto
"""
env = [
  "D:SQLALCHEMY_ECHO=false",
  "D:DATABASE_URI=sqlite+aiosqlite:///:memory:?reinitialize=true",
]
filterwarnings = [
  "error",
  "ignore:pkg_resources is deprecated as an API*:DeprecationWarning",
  "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
  "ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated*:DeprecationWarning",
  "ignore:'audioop' is deprecated*:DeprecationWarning",
  "ignore:create_react_agent has been moved*:langgraph.warnings.LangGraphDeprecatedSinceV10",
  # httpx/asyncio connection pool cleanup on Windows - third-party issue
  "ignore:unclosed transport*:ResourceWarning",
  "ignore:unclosed <socket.socket*:ResourceWarning",
  "ignore:Exception ignored in*:pytest.PytestUnraisableExceptionWarning",
]
python_files = ["*_test.py"]

[tool.coverage.run]
concurrency = ["gevent"]                                      # https://stackoverflow.com/a/76033894
omit = ["*/settings/test.py", "*/test_*.py"]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = ["raise NotImplementedError"]
