[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rag-service"
version = "1.0.0"
description = "RAG (Retrieval-Augmented Generation) service with Pinecone vector database"
authors = ["Homunculy Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "<=1.0.0"
uvicorn = "^0.23.2"
pydantic = ">2.4.0,<3"
pydantic-settings = "^2.0.0"
pinecone = {version = "^5.0.0", extras = ["grpc"]}
openai = "^1.0.0"
langchain = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-text-splitters = "^0.3.0"
tiktoken = "^0.8.0"
structlog = "^25.5.0"
python-multipart = "^0.0.9"
aiofiles = "^24.0.0"
pypdf = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^1.1.1"
httpx = "^0.28.0"
black = "^23.12.1"
ruff = "^0.1.15"
pyright = "^1.1.401"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "D", "T20"]
ignore = ["E501", "D10", "D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
